<resources>
    <string name="app_name">"Eventers "</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="event_name">EVENT</string>
    <string name="hint_event_type">Category</string>
    <string name="when">WHEN</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="event_location">WHERE</string>
    <string name="hint_location">Location</string>
    <string name="event_dress">DRESS CODE</string>
    <string name="hint_style">Style</string>
    <string name="navigate">Navigate</string>
    <string name="Signed_in">Signed in!</string>
    <string name="Sign_in_cancelled">Sign in Cancelled!</string>
    <string name="create_event">Create Event</string>
    <string name="select_time">Select Time</string>
    <string name="empty_fields">EMPTY FIELD!</string>
    <string name="successfully_added">Successfully Added!</string>
    <string name="place">"Place: "</string>
    <string name="location_image">Location Image</string>
    <string name="back_button">Back Button</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="where">WHERE:</string>
    <string name="taj_palace_new_delhi">TAJ PALACE, NEW DELHI</string>
    <string name="whenn">WHEN:</string>
    <string name="date_time">12/08/92 18:20</string>
    <string name="dress_code">DRESS CODE:</string>
    <string name="casuals">Casuals</string>
    <string name="weather">WEATHER:</string>
    <string name="weather_image">Weather Image</string>
    <string name="create_a_new_event">Create a new event</string>
    <string name="profile_image">Profile Image</string>
    <string name="akshay_kant">AKSHAY KANT</string>
    <string name="email_id">EMAIL ID:</string>
    <string name="akshaykant1708_gmail_com">akshaykant1708@gmail.com</string>
    <string name="number">NUMBER:</string>
    <string name="_9999954321">9999954321</string>
    <string name="left_icon_in_a_toolbar_home_or_back">Left icon in a Toolbar. Home or Back</string>
    <string name="eventers">EVENTERS</string>
    <string name="right_icon_in_a_toolbar_profile_or_submit">Right icon in a Toolbar. Profile or Submit</string>
    <string name="event_image_depicts_happiness">Event Image, depicts happiness</string>
    <string name="taj_palace">TAJ PALACE</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="organiser">ORGANISER</string>
    <string name="editor_insert_event_failed">Insert Event Failed</string>
    <string name="editor_insert_event_successful">Insert Event Successful</string>
    <string name="empty_forecast_list">No Weather Information Available</string>
    <string name="_17_12_16">17/12/16</string>
    <string name="title_widget_detail">EVENTS DETAIL</string>
    <string name="latitude_longitude">latLng</string>
</resources>
