<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/include_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin"
            tools:context=".EditorActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/event_name" />

                <!-- Input fields -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <!-- Name field -->
                    <EditText
                        android:id="@+id/edit_event_type"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_event_type"
                        android:inputType="textCapWords" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/event_location" />

                <!-- Input fields -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <!-- Name field -->
                    <EditText
                        android:id="@+id/edit_location"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_location"
                        android:inputType="textCapWords" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/when" />

                <!-- Input fields -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <!-- Name field -->
                    <EditText
                        android:id="@+id/edit_date"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_date"
                        android:focusable="false"
                        android:inputType="date" />

                    <!-- Breed field -->
                    <EditText
                        android:id="@+id/edit_time"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_time"
                        android:focusable="false"
                        android:inputType="datetime" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/event_dress" />

                <!-- Input fields -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <!-- Name field -->
                    <EditText
                        android:id="@+id/edit_dress_style"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_style"
                        android:inputType="textCapWords" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>