<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/touch_selector_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingRight="@dimen/abc_list_item_padding_horizontal_material">

        <ImageView
            android:id="@+id/widget_icon"
            android:layout_width="@dimen/list_icon"
            android:layout_height="@dimen/list_icon"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/abc_list_item_padding_horizontal_material"
            android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
            android:contentDescription="@string/weather_image"
            tools:src="@drawable/art_clear" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_event_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textSize="@dimen/forecast_widget_text_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/primary_text" />

            <TextView
                android:id="@+id/widget_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/secondary_text"
                tools:text="@string/event_location" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:gravity="right"
                android:textColor="@color/primary_text"
                tools:text="@string/date" />

            <TextView
                android:id="@+id/widget_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:gravity="right"
                android:textColor="@color/forecast_low_text"

                tools:text="@string/time" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>