<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="vertical"
    android:layout_marginBottom="10dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_post"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:elevation="@dimen/cardview_default_elevation"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/event_image_depicts_happiness"
                android:src="@drawable/ic_quoteflower"/>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/article_event_type"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/article_event_location"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/taj_palace"
                    android:textColor="@color/dark_grey" />

                <TextView
                    android:id="@+id/article_event_date"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/article_event_location"
                    android:padding="5dp"
                    android:text="@string/date"
                    android:textColor="@color/dark_grey" />

                <TextView
                    android:id="@+id/article_event_time"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/article_event_location"
                    android:layout_toRightOf="@+id/article_event_date"
                    android:padding="5dp"
                    android:text="@string/time"
                    android:textColor="@color/dark_grey" />
            </RelativeLayout>

            <TextView
                android:id="@+id/article_event_type"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/birthday"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/article_is_organiser"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="10dp"
                android:text="@string/organiser"

                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="16dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>